frontend: fix spacings and colors

--- a/frontend/src/client/upload-dialog/styles.css
+++ b/frontend/src/client/upload-dialog/styles.css
@@ -1,25 +1,39 @@
 :root {
     --main-color: rgb(2, 75, 227);
-    --accent-color: rgb(216, 53, 236);
+    --accent-color: rgb(174, 0, 254);
     --upload-background-color: rgba(2, 75, 227, 0.3);
+}
+
+img {
+    width: 200px;
 }
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 15px;
 }
 
 .upload-button {
     width: 300px;
-    height: 200px;
+    height: 140px;
     background-color: var(--upload-background-color);
     border-radius: 20px;
     border-style: dashed;
     border-width: 2px;
     border-color: var(--accent-color);
     color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1rem;
+}
+
+.upload-icon {
+    font-size: 3rem;
 }
 
 .upload-button-action-text {
@@ -30,6 +44,7 @@ main {
 
 .process-button {
     width: 200px;
+    height: 50px;
     color: var(--accent-color);
     background-color: transparent;
     padding: 15px;
@@ -37,6 +52,11 @@ main {
     border-radius: 15px;
     border: 2px var(--accent-color) solid;
     box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    transition: all 0.3s;
 }
 
 .process-button:hover {
@@ -52,4 +72,22 @@ main {
 
 .hide {
     display: none;
+}
+
+.loader {
+    border: 4px solid #f3f3f3;
+    border-top: 4px solid var(--main-color);
+    border-radius: 50%;
+    width: 12px;
+    height: 12px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
